--- a/forms.html
+++ b/forms.html
@@ -19,8 +19,13 @@
     <input type="password" placeholder="Digite sua Senha" />
     <p></p>
 
-    <button type="submit"  />Enviar Formulário
-    <button type="reset" />Limpar
+    <button type="submit"> 
+        Enviar 
+    </button>  
+
+    <button type="reset">
+        Limpar
+    </button>
 </form>    
 </body>
 </html>
